ibmmq-tomcat-camel-deploy.yaml
apiVersion: v1
items:
- apiVersion: v1
  data:
    context.xml: |
      [...]
  kind: ConfigMap
  metadata:
    labels:
      app: ibmmq-tomcat-camel
    name: ibmmq-tomcat-camel-ctx
- apiVersion: v1
  data:
    application.properties: |
      startConsumers=true
  kind: ConfigMap
  metadata:
    labels:
      app: ibmmq-tomcat-camel
    name: ibmmq-tomcat-camel-prop
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: ibmmq-tomcat-camel
    name: ibmmq-tomcat-camel
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: quay.io/eformat/ibmmq-tomcat-camel:latest
      from:
        kind: DockerImage
        name: quay.io/eformat/ibmmq-tomcat-camel:latest
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: ibmmq-tomcat-camel
    name: ibmmq-tomcat-camel
  spec:
    replicas: 8
    selector:
      app: ibmmq-tomcat-camel
      deploymentconfig: ibmmq-tomcat-camel
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: ibmmq-tomcat-camel
          deploymentconfig: ibmmq-tomcat-camel
      spec:
        containers:
        - image: ''
          imagePullPolicy: Always
          name: ibmmq-tomcat-camel
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
            name: jolokia
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /opt/webserver/conf/context.xml
            name: ibmmq-tomcat-ctx
            subPath: context.xml
          - mountPath: /opt/webserver/webapps/application.properties
            name: ibmmq-tomcat-prop
            subPath: application.properties
          - mountPath: /opt/webserver/webapps/ca.crt
            name: ibmmq-tomcat-ca
            subPath: ca.crt
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: ibmmq-tomcat-camel-ctx
          name: ibmmq-tomcat-ctx
        - configMap:
            defaultMode: 420
            name: ibmmq-tomcat-camel-prop
          name: ibmmq-tomcat-prop
        - configMap:
            defaultMode: 420
            name: ibmmq-tomcat-camel-ca
          name: ibmmq-tomcat-ca
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - ibmmq-tomcat-camel
        from:
          kind: ImageStreamTag
          name: ibmmq-tomcat-camel:latest
          namespace: ibmmq-tomcat-camel
        lastTriggeredImage: quay.io/eformat/ibmmq-tomcat-camel:latest
      type: ImageChange
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: ibmmq-tomcat-camel
    name: ibmmq-tomcat-camel
  spec:
    clusterIP: 172.30.139.25
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: jolokia
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      app: ibmmq-tomcat-camel
      deploymentconfig: ibmmq-tomcat-camel
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: ibmmq-tomcat-camel
    name: ibmmq-tomcat-camel
  spec:
    port:
      targetPort: 8080-tcp
    subdomain: ""
    to:
      kind: Service
      name: ibmmq-tomcat-camel
      weight: 100
    wildcardPolicy: None
- apiVersion: v1
  data:
    ca.crt: |
      [...]
  kind: ConfigMap
  metadata:
    name: ibmmq-tomcat-camel-ca
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
